                added m_recorder
                added SetRecorder
            rthumandriver.cpp
                changed new_race()
                changed drive_at()
                changed shutdown()
                changed common_drive(): added check for input of intervention toggle on/off
                added   SetRecorder()
                added   m_prevIntervention member
            CMakeLists.txt
                changed frontend added to ADD_SDLIB_INCLUDEDIR
                changed backend added to ADD_SDLIB_INCLUDEDIR
                changed frontend added to ADD_SDLIB_LIBRARY
                changed backend added to ADD_SDLIB_LIBRARY
        tgf/
            params.cpp
                Modified xmlGetOuputLine to write floats with full precision.
            tgf.h
                added GF_LOGGING_ENABLE and GF_LOGGING_DISABLE macro's for clearer code
        tgfclient/
            gui.h
                added   tGfuiRadioButtonList
                added   tGfuiRadioButton
                added   GfuiDrawRadioButtonList()
                added   GfuiDrawRadioButton()
                added   GfuiReleaseRadioButtonList()
                added   GfuiReleaseRadioButton()
                changed GfuiObject
            guicheckbox.cpp
                changed GfuiCheckboxCreate: added focused images
            guimenu.cpp
                added   GfuiMenuCreateRadioButtonListControl
                added   GfuiMenuBoolToStr()
                changed GfuiMenuControlGetBoolean(): made public and renamed to fit the api function naming scheme.
            guimenu.h
                added   GFMNU_TYPE_RADIO_BUTTON_LIST
                added   GFMNU_ATTR_SELECTED, GFMNU_ATTR_DISTANCE, GFMNU_ATTR_MINIMUM_OF_ONE, GFMNU_ATTR_OPTIONS
            guiobject.cpp
                changed GfuiDraw()
                changed GfuiReleaseObject()
                added   GfuiDrawString() overloaded to support different parameters.
            tgfclient.h