@@ -431,7 +431,7 @@
         <attstr name="type" val="label"/>
         <attnum name="x" val="290"/>
         <attnum name="y" val="270"/>
-        <attstr name="text" val="Intervention toggle on/off"/>
+        <attstr name="text" val="Intervention toggle on/off:"/>
         <attstr name="h align" val="right"/>
         <attnum name="width" val="140"/>
         <attstr name="font" val="small_t"/>
